# pravah-source

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  BUILD_PROMPT.md  CLAUDE.md  Makefile  README.md  llms.txt  pyproject.toml
.cursor/rules/: pravah.mdc
.github/workflows/: ci.yml
config/: pravah.toml
data/raw/: README.md
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  MILESTONES.md  MODEL.md  PRESSURE_INDEX.md  TRUST.md
docs/adr/: 0001-glass-box-over-deep-learning.md  0002-skip-cv-and-festival.md  0003-offline-self-contained-frontend.md  0004-coverage-normalized-features.md
notebooks/: README.md
scripts/: build_basemap.py  e2e_check.py
src/pravah/: __init__.py  build_aggregates.py  config.py  constants.py  equity.py  explain.py  features.py  model.py  optimise.py  pipeline.py  pressure.py  schema.py  validate.py
tests/: conftest.py  test_constants.py  test_features.py  test_model.py  test_optimise.py  test_pressure.py  test_sanity.py
web/: README.md  app.js  basemap.js  data.js  index.html  styles.css
web/data/: aggregates.json
