[project]
name = "pravah"
version = "0.1.0"
description = "Traffic-pressure intelligence for Bengaluru Traffic Police — re-express violations as vehicle-hours of delay."
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "numpy>=1.24"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3", "shap>=0.44"]   # M3 forecast (interpretable only)
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
pravah-build = "pravah.build_aggregates:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pravah"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["data: tests that require the real CSVs in data/raw (deselect with -m 'not data')"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
